Actualizaciones y pequeños cambios en las paginas

--- a/wp-content/themes/inclusiva/assets/styles/layouts/_sidebar.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_sidebar.scss
@@ -57,6 +57,17 @@
 					}
 				}
 			}
+			&#recentcomments{
+				li{
+					padding: 7px 15px;
+				}
+			}
+		}
+		.tagcloud{
+			padding: 7px 15px; 
+		}
+		select{
+			margin: 7px 15px; 
 		}
 	&.banner{
 		margin-bottom: 5px;
