--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -206,6 +206,12 @@ article{
 }
 /* Páginas Especiales */
 
+.search-form{
+  .form-control{
+    @include fa();
+  }
+}
+
 /* Navegación Secundaria*/
 .navbar-sub{
   min-height: 38px;
