--- a/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
@@ -11,27 +11,30 @@ header{
 					font-size: 13px;
 					font-weight: normal;
 					.navbar-brand{
-						font-size: 13px;
+						font-size: 11px;
 						height: 100%;
-						padding-top: 10px;
-						padding-bottom: 10px;
+						padding: 5px 0;
 						margin-bottom: 0;
 						color: $white;
 					}
 				}
 				&.navbar-right{ 
-					background-color: $green; 
+					background-color: transparent; 
 					li{
 						a{
-	  						text-transform: uppercase;
 	  						font-size: 11px;
 	  						color: $white;
-	  						padding-top: 10px;
-							padding-bottom: 10px;
+	  						padding-top: 5px;
+							padding-bottom: 5px;
 						}
 					}
 					&.navbar-social{
 						li{
+							a{
+								padding-left: 10px;
+								padding-right: 10px;
+							}
+
 							&.menu-item-11086{
 								a{
 									background-color: $blue--fb;
@@ -63,7 +66,7 @@ header{
 							a{
 								background-color: transparent;
 								&:hover{
-									color: $yellow;
+									color: $yellow; 
 								}
 							}
 						}
@@ -74,36 +77,46 @@ header{
 			.navbar-form{
 				margin-top: 0;
 				margin-bottom: 0;
-	  			padding-top: 8px;
-	  			padding-bottom: 8px;
-	  			background-color: $green; 
+	  			padding-top: 0px;
+	  			padding-bottom: 0px;
+	  			background-color: transparent;
+	  			@media (min-width: $screen-lg-min){
+	  				background-color: $green;
+	  				padding: 0;
+	  				margin: 0;
+	  			}
+				
 				.search-form{
-					.input-group{
-						.form-control{
-							height: 24px;
-							padding: 3px 7px;
-							font-size: 13px;
-							border: 1px solid transparent;
-							@include border-radius(0px);
-							&:focus{
-								color: $black;
+					.form-control{
+						height: 30px;
+						padding: 3px 7px;
+						font-size: 11px;
+						border: 1px solid transparent;
+						background-color: $white--smoke;
+						@include border-radius(0px);
+						@include fa();
+						
+						@media (min-width: $screen-lg-min){
+							background-color: transparent;
+							-webkit-transition-duration: 400ms;
+							-webkit-transition-property: width, background;
+							-webkit-transition-timing-function: ease;
+							-moz-transition-duration: 400ms;
+							-moz-transition-property: width, background;
+							-moz-transition-timing-function: ease;
+							-o-transition-duration: 400ms;
+							-o-transition-property: width, background;
+							-o-transition-timing-function: ease;
+							width: 33px;
+							@include placeholder($white);					
+							
+							&:focus, &:active{
+								@include placeholder($gray);
 								background-color: $white--smoke;
+								width: 100%;
 							}
 						}
-						.input-group-btn{
-							.search-submit{
-								@include border-radius(0px);
-								padding: 2px 7px;
-								font-size: 12.5px;
-								border: 1px solid transparent;
-								background-color: $white;
-								color: $gray--light;
-								&:hover{
-									border: 1px solid transparent;
-									background-color: $white;
-								}
-							}
-						}
+
 					}
 				}
 			}
