--- a/wp-content/themes/inclusiva/assets/styles/main.scss
+++ b/wp-content/themes/inclusiva/assets/styles/main.scss
@@ -8,6 +8,7 @@
 // endbower
 
 @import "common/_global";
+@import "components/_buddypress";
 @import "components/_buttons";
 @import "components/_comments";
 @import "components/_forms";
