--- a/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
@@ -105,7 +105,7 @@
 		}
 	}
 
-	&.page-template-template-proyectos, &.parent-pageid-12025, &.parent-pageid-11347, &.parent-pageid-11363{
+	/*&.page-template-template-proyectos, &.parent-pageid-12025, &.parent-pageid-11347, &.parent-pageid-11363{*/
 		&.special-header{
 			.masshead{
 				.media{
@@ -134,7 +134,7 @@
 				}
 			}
 		}
-	}
+	/*}*/
 }
 
 
