--- a/wp-content/themes/inclusiva/assets/styles/layouts/_sidebar.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_sidebar.scss
@@ -45,6 +45,14 @@
 						@include opensans(bold);
 					}
 				}
+				&.dropdown{
+					&:hover{
+						.dropdown-menu{
+							display: block;
+							margin: 0;
+						}
+					}
+				}
 			}
 			&.related-posts{
 				li{
