--- a/wp-content/themes/inclusiva/assets/styles/layouts/_sidebar.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_sidebar.scss
@@ -77,12 +77,13 @@
 				}
 			}
 		}
-		.tagcloud{
+		.tagcloud, .textwidget{
 			padding: 7px 15px; 
 		}
 		select{
 			margin: 7px 15px; 
 		}
+
 	&.banner{
 		margin-bottom: 5px;
 	}
