--- a/wp-content/themes/inclusiva/assets/styles/layouts/_sidebar.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_sidebar.scss
@@ -80,6 +80,11 @@
 		.tagcloud, .textwidget{
 			padding: 7px 15px; 
 		}
+		.textwidget{
+			h3{
+				padding: 13px 0px 9pt 0px;
+			}
+		}
 		select{
 			margin: 7px 15px; 
 		}
