--- a/wp-content/themes/inclusiva/assets/styles/main.scss
+++ b/wp-content/themes/inclusiva/assets/styles/main.scss
@@ -16,6 +16,7 @@
 @import "components/_grid";
 @import "components/_wp-classes";
 @import "components/_menu";
+@import "components/_accordion";
 @import "layouts/_header";
 @import "layouts/_sidebar";
 @import "layouts/_footer";
