--- a/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
@@ -36,7 +36,7 @@ header{
 							}
 							&#menu-item-14012{
 								a{
-									background-color: $white;
+									background-color: $yellow--light;
 										color: $red--google;
 									&:hover{
 										background-color: $yellow--light;
