--- a/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
@@ -176,6 +176,14 @@
 			}
 		}
 	}
+	&.consulta-de-compra-de-guano-de-la-isla{
+		main, aside{
+			@include make-sm-column(6);
+		}
+		aside{
+			margin-top: 0;
+		}
+	}
 }
 
 
