Fix de slider y padding en section. Corregimos el Autor

--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -335,7 +335,9 @@ main{
 }
 
 .section{
-  padding-top: 60px;
+  @media(min-width: $screen-sm-min){
+    padding-top: 30px;
+  }
   padding-bottom: 30px;
 }
 
