Fix de iconos en el home. Fix de query en el list de home

--- a/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
@@ -423,7 +423,7 @@
       						z-index: 0;
 							
 							img{
-								
+								@include fadeInDown();
 							}
 							figcaption{
 								position: absolute !important;
