--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -399,20 +399,28 @@ article{
     display: block;
     float: left;
     margin-right: 15px;
+    overflow: hidden;
     a.format-icon{
       position: absolute;
-      bottom: 8px;
-      left: 8px;
-      padding: 0; 
-      border: 1px solid $yellow;
-      width: 24px;
-      text-align: center;
-      i{
-        font-size: 12px;
-        color: $yellow;
+      bottom: -8px;
+      right: -8px;
+      .fa-stack{
+        .fa-stack-2x{
+          color: $black;
+          @include opacity(.35);
+        }
+        .fa-stack-1x{
+          font-size: 13px;
+        }
       }
     }
   }
+  &:hover{
+    a.format-icon{
+      @include bounceIn();
+    }
+  }
+
   header{
     h2, h3, h4{
       @include opensans(semibold);
