--- a/wp-content/themes/inclusiva/assets/styles/common/_mixins.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_mixins.scss
@@ -244,3 +244,9 @@
   font-size: 10px;
   color: $color;
 }
+
+@mixin entry-title(){
+  @include opensans();
+  font-size: 20px;
+  font-weight: normal;
+}
