--- a/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
@@ -2,7 +2,7 @@
 header{
 	&.search-header{
 		background-color: $green--light;
-		#searchform{
+		form{
 			.checkbox{
 				label{
 					color: $white;
