--- a/wp-content/themes/inclusiva/assets/styles/layouts/_posts.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_posts.scss
@@ -6,7 +6,7 @@
 		}
 	}
 	article.post header .entry-title {
-    	font-size: 36px
+    	@include entry-title(lg);
     }
    &.single-servicios{
    	article .entry-content .entry-content__article{ 
